--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:image" content="https://cat3d.github.io/img/rep_img.jpeg">
+    <meta property="og:image" content="https://plantvillagediffusion.github.io/img/rep_img.jpeg">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1711">
     <meta property="og:image:height" content="576">
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://cat3d.github.io/" />
+    <meta property="og:url" content="https://plantvillagediffusion.github.io/" />
     <meta property="og:title" content="PlantVillageDiffusion: Plant Leaf Disease Dataset with Diffusion Models" />
     <meta property="og:description"
         content="Advances in 3D reconstruction have enabled high-quality 3D capture, but require a user to collect hundreds to thousands of images to create a 3D scene. We present CAT3D, a method for creating anything in 3D by simulating this real-world capture process with a multi-view diffusion model. Given any number of input images and a set of target novel viewpoints, our model generates highly consistent novel views of a scene. These generated views can be used as input to robust 3D reconstruction techniques to produce 3D representations that can be rendered from any viewpoint in real-time. CAT3D can create entire 3D scenes in as little as one minute, and outperforms existing methods for single image and few-view 3D scene creation." />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="CAT3D: Create Anything in 3D with Multi-View Diffusion Models" />
+    <meta name="twitter:title" content="PlantVillageDiffusion: Plant Leaf Disease Dataset with Diffusion Models" />
     <meta name="twitter:description"
         content="Advances in 3D reconstruction have enabled high-quality 3D capture, but require a user to collect hundreds to thousands of images to create a 3D scene. We present CAT3D, a method for creating anything in 3D by simulating this real-world capture process with a multi-view diffusion model. Given any number of input images and a set of target novel viewpoints, our model generates highly consistent novel views of a scene. These generated views can be used as input to robust 3D reconstruction techniques to produce 3D representations that can be rendered from any viewpoint in real-time. CAT3D can create entire 3D scenes in as little as one minute, and outperforms existing methods for single image and few-view 3D scene creation." />
-    <meta name="twitter:image" content="https://cat3d.github.io/img/rep_img.jpeg" />
+    <meta name="twitter:image" content="https://plantvillagediffusion.github.io/img/rep_img.jpeg" />
 
     <link rel="icon" href="favicon.ico">
 
